# starling

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  pyproject.toml  requirements-build.txt  requirements-dev.txt
.github/workflows/: ci.yml
bench/: .gitignore
bindings/python/: CMakeLists.txt  bind_01_core.cpp  bind_02_persistence.cpp  bind_03_evidence.cpp  bind_04_bus.cpp  bind_05_retrieval.cpp  bind_06_extractor.cpp  bind_07_cognizer.cpp  bind_08_tom.cpp  bind_09_brain_dynamics.cpp  bind_10_embedding.cpp  bind_11_neocortex.cpp  bind_12_prospective.cpp  bind_13_memory_ops.cpp  bind_14_governance.cpp  bind_common.hpp  bindings.hpp  module.cpp
cmake/: StarlingOptions.cmake  StarlingZvec.cmake  merge_zvec_bundles.sh
dashboard/: README.md
dashboard/web/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
docs/: Starling_Technical_Report.md  Starling_Technical_Report.zh-CN.md
docs/design/: system_design.md
docs/eval/: 2026-06-02-p2-admission-report.md
examples/: quickstart.py
include/starling/: adapter.hpp  final_query_assertion.hpp  preflight.hpp  profile_capability.hpp  runtime_health.hpp  testing_marker.hpp  version.hpp
integrations/openclaw/: README.md  USAGE.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
migrations/: 0001_initial_schema.sql  0002_extraction_attempt_unique.sql  0003_engram_store_columns.sql  0004_conflict_probe_indices.sql  0005_basic_retrieve_index.sql  0006_immutable_fields_trigger.sql  0007_immutable_triggers_null_safe.sql  0008_cognizer_schema.sql  0009_conflict_key_unique.sql  0010_tom_belief_tracker.sql  0011_replay_scheduler.sql  0012_reconsolidation.sql  0013_container_content.sql  0014_grounding_acts.sql  0015_projection_index.sql  0016_statement_vectors.sql  0017_idx_vector_payload.sql  0018_commitments.sql  0019_commitment_triggers.sql  0020_commitment_protection.sql  0021_commitment_tenant_keys.sql  0022_scope_parties_and_cg_subscriber.sql  0023_statement_scoped_secondary_keys.sql  0024_grounding_acts_seven.sql  0025_episodic_events.sql  0026_perception_state.sql  0027_extraction_attempt_cost.sql  0028_consolidation_summary.sql  0029_governance_pipeline_run.sql  0030_persona_subscriber_checkpoint.sql  0031_cognizer_archive.sql
python/starling/: __init__.py  _memory_core.py  memory.py  runtime.py  working_set.py
scripts/: build_ck_corpus_v2.py  build_common_knowledge_corpus.py  build_tombench_full_corpus.py  build_tombench_second_order_corpus.py  ci_clang_tidy_diff.py  ci_static_scan.py  configure_build.py  eval_commitment.py  eval_extractor_smoke.py  eval_fantom.py  eval_longmemeval.py  eval_p1_extractor.py  eval_perception_starling.py  eval_quality_baseline.py  eval_subject_kind.py  eval_tom2_starling.py  eval_tom_bench.py  eval_tombench_full.py  generate_commitment_corpus.py  generate_eval_corpus.py  ingest_session.py  load_test_p3c.py  reclassify_cognizers.py  run_dashboard.py  seed_demo.py  starling_tombench_server.py  starling_tomeval_server.py
src/: final_query_assertion.cpp  preflight.cpp  runtime_health.cpp
src/affect/: affect_vector.cpp
src/bus/: bus.cpp  bus_event.cpp  canonical_scope.cpp  conflict_key.cpp  conflict_key_backfill.cpp  conflict_probe.cpp  consumer_state.cpp  normalized_interval.cpp  outbox_dispatcher.cpp  outbox_writer.cpp  pipeline_ledger.cpp  statement_writer.cpp  subscriber_pump.cpp
src/cognizer/: alias_normalizer.cpp  cognizer_hub.cpp  knowledge_frontier.cpp  name_resolver.cpp  perception_reconstructor.cpp  uuid5.cpp
src/embedding/: embedding_worker.cpp  openai_embedding_adapter.cpp  stub_embedding_adapter.cpp
src/evidence/: engram.cpp  engram_store.cpp  evidence_validator.cpp  ingest_policy_resolver.cpp
src/extractor/: anthropic_adapter.cpp  episodic_extractor.cpp  extraction_span_key.cpp  extractor.cpp  fake_llm_adapter.cpp  json_parser.cpp  openai_adapter.cpp  sse_stream.cpp  statement_validator.cpp  xml_parser.cpp
src/governance/: capability_policy.cpp  health_sampler.cpp  metrics_gatherer.cpp  pipeline_run_store.cpp  restart_guard.cpp  runtime_supervisor.cpp  scoped_work_gate.cpp  write_gate.cpp
src/hippocampus/: affect_buffer.cpp  working_set.cpp
src/memory/: memory_ops.cpp
src/neocortex/: common_ground_container.cpp  persona_container.cpp
src/net/: http_post_json.cpp
src/persistence/: connection.cpp  migration_runner.cpp  sqlite_adapter.cpp
src/projection/: projection_maintainer.cpp
src/prospective/: action_guard.cpp  commitment_engine.cpp  policy_engine.cpp  trigger.cpp
src/reconsolidation/: arbitration.cpp  plastic_window.cpp  reconsolidation_engine.cpp
src/replay/: consolidation_ops.cpp  forgetting_curve.cpp  gist_clustering.cpp  gist_prompt.cpp  gist_writer.cpp  replay_scheduler.cpp  (+1 more)
tests/cpp/: CMakeLists.txt  test_abstention_gate.cpp  test_action_guard.cpp  test_affect_replay_weight.cpp  test_affect_reranker.cpp  test_affect_vector.cpp  test_alias_normalizer.cpp  test_anthropic_adapter.cpp  test_appraise_emotion.cpp  test_arbitration_mild.cpp  test_arbitration_severe.cpp  test_basic_retrieve_index.cpp  test_basic_retriever_filter_predicates.cpp  test_basic_retriever_frontier_filter.cpp  test_basic_retriever_multi_holder_reject.cpp  test_basic_retriever_recalled_emit.cpp  test_belief_tracker.cpp  test_bus_append_evidence.cpp  test_bus_statement_write.cpp  test_bus_write_conflict.cpp  test_bus_write_supersedes.cpp  test_canonical_scope.cpp  test_canonicalize.cpp  test_capability_policy.cpp  test_cognizer_hub_register.cpp  test_cognizer_registration_gate.cpp  test_cognizer_relations.cpp  test_cognizer_types.cpp  test_commitment_engine.cpp  test_commitment_pending.cpp  test_commitment_protection_decay.cpp  test_commitment_tenant_isolation.cpp  test_common_ground_container.cpp  test_common_ground_read.cpp  test_common_ground_subscriber.cpp  test_common_ground_writer.cpp  test_conflict_key.cpp  test_conflict_key_backfill.cpp  test_conflict_key_unique.cpp  test_conflict_probe_indices.cpp  (+124 more)
(+775 files in other folders)
