cmake_minimum_required(VERSION 3.27)
project(starling LANGUAGES CXX VERSION 0.0.1)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(cmake/StarlingOptions.cmake)

# OpenSSL discovery — Homebrew on Apple Silicon installs at /opt/homebrew.
# Provide a fallback hint before find_package so a bare `cmake -S . -B build`
# works without the caller passing -DOPENSSL_ROOT_DIR.
if(APPLE AND NOT DEFINED OPENSSL_ROOT_DIR)
    if(EXISTS "/opt/homebrew/opt/openssl@3")
        set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3")
    endif()
endif()
find_package(OpenSSL REQUIRED)

# SQLite3 — Homebrew on Apple Silicon installs at /opt/homebrew/opt/sqlite.
# The system framework on macOS is older than 3.46; prefer Homebrew when present.
if(APPLE AND NOT DEFINED SQLite3_ROOT)
    if(EXISTS "/opt/homebrew/opt/sqlite/lib/libsqlite3.dylib")
        set(SQLite3_ROOT "/opt/homebrew/opt/sqlite")
        list(PREPEND CMAKE_PREFIX_PATH "/opt/homebrew/opt/sqlite")
    endif()
endif()
find_package(SQLite3 3.46 REQUIRED)

find_package(CURL REQUIRED)
find_package(nlohmann_json 3.11 QUIET)
if(NOT nlohmann_json_FOUND)
    include(FetchContent)
    FetchContent_Declare(json
        GIT_REPOSITORY https://github.com/nlohmann/json.git
        GIT_TAG v3.11.3)
    FetchContent_MakeAvailable(json)
endif()

add_library(starling_core STATIC)
target_include_directories(starling_core PUBLIC include)
target_sources(starling_core PRIVATE
    src/preflight.cpp
    src/final_query_assertion.cpp
    src/runtime_health.cpp
    src/schema/canonicalize.cpp
    src/schema/statement_enums.cpp
    src/schema/enums.cpp
    src/persistence/migration_runner.cpp
    src/persistence/connection.cpp
    src/bus/bus_event.cpp
    src/bus/outbox_writer.cpp
    src/bus/consumer_state.cpp
    src/bus/outbox_dispatcher.cpp
    src/bus/pipeline_ledger.cpp
    src/bus/statement_writer.cpp
    src/bus/normalized_interval.cpp
    src/bus/canonical_scope.cpp
    src/bus/conflict_key.cpp
    src/bus/conflict_probe.cpp
    src/bus/conflict_key_backfill.cpp
    src/persistence/sqlite_adapter.cpp
    src/evidence/engram.cpp
    src/evidence/ingest_policy_resolver.cpp
    src/evidence/evidence_validator.cpp
    src/evidence/engram_store.cpp
    src/bus/bus.cpp
    src/extractor/extraction_span_key.cpp
    src/extractor/fake_llm_adapter.cpp
    src/extractor/openai_adapter.cpp
    src/extractor/xml_parser.cpp
    src/extractor/statement_validator.cpp
    src/extractor/extractor.cpp
    src/retrieval/basic_retriever.cpp
    src/cognizer/uuid5.cpp
    src/cognizer/alias_normalizer.cpp
    src/cognizer/cognizer_hub.cpp
    src/cognizer/knowledge_frontier.cpp
    src/tom/tom_engine.cpp
    src/tom/common_ground.cpp
    src/tom/nesting_depth_writer.cpp
    src/tom/rate_limiter.cpp
    src/tom/depth_estimator.cpp
    src/tom/mentalizing_believe.cpp
    src/tom/mentalizing_know.cpp
    src/tom/mentalizing_misalign.cpp
    src/tom/mentalizing_shared.cpp
)
target_compile_options(starling_core PRIVATE ${STARLING_WARNING_FLAGS})
target_link_libraries(starling_core PUBLIC OpenSSL::Crypto SQLite::SQLite3
    CURL::libcurl
    nlohmann_json::nlohmann_json)
if(APPLE)
    target_link_libraries(starling_core PUBLIC "-framework CoreFoundation")
endif()

# Embed migration SQL into a header. Re-run cmake configure when files change.
file(GLOB STARLING_MIGRATION_FILES
    LIST_DIRECTORIES false
    RELATIVE "${CMAKE_SOURCE_DIR}/migrations"
    "${CMAKE_SOURCE_DIR}/migrations/*.sql")
list(SORT STARLING_MIGRATION_FILES)
set(STARLING_MIGRATIONS_INC "${CMAKE_BINARY_DIR}/generated/starling/migrations.inc")
file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/generated/starling")
set(_mig_body "")
foreach(mig ${STARLING_MIGRATION_FILES})
    set(_mig_path "${CMAKE_SOURCE_DIR}/migrations/${mig}")
    file(READ "${_mig_path}" _mig_sql)
    string(REGEX MATCH "^([0-9]+)_(.+)\\.sql$" _ "${mig}")
    set(_mig_version_raw "${CMAKE_MATCH_1}")
    math(EXPR _mig_version "${_mig_version_raw}")  # strips leading zeros, base 10
    set(_mig_name "${CMAKE_MATCH_2}")
    string(APPEND _mig_body
        "  { ${_mig_version}, \"${_mig_name}\", R\"STARLING_MIG(${_mig_sql})STARLING_MIG\" },\n")
    set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_mig_path}")
endforeach()
file(WRITE "${STARLING_MIGRATIONS_INC}"
    "// Auto-generated by CMakeLists.txt. Do not edit.\n"
    "// Each row: { version, name, raw_sql }.\n"
    "namespace starling::persistence::detail {\n"
    "struct EmbeddedMigration { int version; const char* name; const char* sql; };\n"
    "inline constexpr EmbeddedMigration kEmbeddedMigrations[] = {\n"
    "${_mig_body}"
    "};\n"
    "}\n")
target_include_directories(starling_core PRIVATE "${CMAKE_BINARY_DIR}/generated")

# Testing-only translation unit lives in its own target so prod can omit it.
# Links starling_core because mark_consolidated drives the same OutboxWriter +
# TransactionGuard primitives Bus uses — it just lives outside the prod link
# graph (CI scanner + preflight enforce that prod profiles never pull this
# target in).
add_library(starling_testing_marker STATIC src/testing/testing_marker.cpp)
target_include_directories(starling_testing_marker PUBLIC include)
target_link_libraries(starling_testing_marker PUBLIC starling_core)

option(STARLING_BUILD_PYTHON "Build pybind11 bindings" ON)
if(STARLING_BUILD_PYTHON)
    add_subdirectory(bindings/python)
endif()

enable_testing()
option(STARLING_BUILD_TESTS "Build C++ tests" ON)
if(STARLING_BUILD_TESTS)
    add_subdirectory(tests/cpp)
endif()
